# SummerShortTerm2

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  src.qrc
.github/workflows/: main.yml  qt-test.yml
app/: app.cpp  app.h
common/: index.h  pageindex.h
controller/: fightercontroller.cpp  fightercontroller.h  scenecontroller.cpp  scenecontroller.h
model/: character.cpp  character.h  characterstate.cpp  characterstate.h  scenestate.cpp  scenestate.h  topmodel.cpp  topmodel.h
test/: CMakeLists.txt  healthmodeltest.cpp  healthmodeltest.h
view/: about.ui  battle.cpp  battle.h  bgmplayer.cpp  bgmplayer.h  cast.cpp  cast.h  cast.ui  esc.cpp  esc.h  esc.ui  fighter.cpp  fighter.h  menu.cpp  menu.h  menu.ui  role.cpp  role.h  role.ui  roleselection.cpp  roleselection.h  roleselection.ui  scene.cpp  scene.h  settlement.cpp  settlement.h  settlement.ui  showhealth.cpp  showhealth.h
